--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     
     <script>
-        alert("Hello, welcome, sorry for the spelling mistakes I was 12 when I made it, also, wait until the whole text is loaded before clicking a button, otherwise it will brake.
+        alert("Hello, welcome, sorry for the spelling mistakes I was 12 when I made it, also, wait until the whole text is loaded before clicking a button, otherwise it will break.")
         let output = document.getElementById('output');
         let buttonA = document.getElementById('buttonA');
         let buttonB = document.getElementById('buttonB');
